--- a/angular-webapp-pwa/src/app/product-list/product-list.component.html
+++ b/angular-webapp-pwa/src/app/product-list/product-list.component.html
@@ -1,22 +1,33 @@
 <h2>Products</h2>
 
-<div *ngFor="let product of products; index as productId">
+<ng-container *ngIf="products && products.length > 0">
+  <div *ngFor="let product of products; let productId = index">
 
-  <h3>
-    <a [title]="product.name + ' details'" [routerLink]="['/products', productId]">
-      {{ product.name }}
-    </a>
-  </h3>
+    <h3>
+      <a [title]="product.name + ' details'" [routerLink]="['/products', productId]">
+        {{ product.name }}
+      </a>
+    </h3>
+    
+    products
+    
+    <p *ngIf="product.description">
+      Description: {{ product.description }}
+    </p>
 
-  <p *ngIf="product.description">
-    Description: {{ product.description }}
-  </p>
+    <button (click)="share()">
+      Share
+    </button>
+    <app-product-alerts
+      [product]="product" 
+      (notify)="onNotify()">
+    </app-product-alerts>
 
-<button (click)="share()">
-  Share
-</button>
-
-<app-product-alerts
-  [product]="product" 
-  (notify)="onNotify()">
-</app-product-alerts>
+  </div> 
+</ng-container>
+<hr>
+<div class="button-wrapper">
+  <a [routerLink]="['/product-create']">
+    <button>Create Product</button>
+  </a>
+</div>
