--- a/angular-webapp-pwa/src/app/top-bar/top-bar.component.html
+++ b/angular-webapp-pwa/src/app/top-bar/top-bar.component.html
@@ -2,8 +2,10 @@
   <h1>ISA Store</h1>
 </a>
 
-<a [routerLink]="['/cart']" class="button fancy-button"><i class="material-icons">shopping_cart</i>Checkout</a>
-
+<div class="right-wrap" *ngIf="userInfo">
+	<a [routerLink]="['/cart']" class="button fancy-button"><i class="material-icons">shopping_cart</i>Checkout</a>
+	<a href="javascript:void(0)" (click)="logout()" class="button">Logout</a>
+</div>
 <!-- 
 Copyright Google LLC. All Rights Reserved.
 Use of this source code is governed by an MIT-style license that
